# sbxkb

./: Makefile.am  Makefile.in  aclocal.m4  clean.sh  configure  configure.ac  main.c  main.c~  sbxkb.spec
.deps/: eggtrayicon.Po  main.Po
images/: Makefile.am  Makefile.in
