## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\"\
	$(GDKLIB_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = sbxkb

sbxkb_SOURCES = \
	main.c

sbxkb_LDFLAGS = 

sbxkb_LDADD = \
	$(GDKLIB_LIBS)

EXTRA_DIST = \
	$(flags_DATA)

SUBDIRS = \
	images

