dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(sbxkb, 0.7.7)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC







PKG_CHECK_MODULES(GDKLIB, gdk-pixbuf-2.0 gdk-pixbuf-xlib-2.0 gtk+-3.0)
AC_OUTPUT([
Makefile
images/Makefile
])
