
EXTRA_DIST = \
	$(flags_DATA)

flags_DATA = \
	ad.png\
	ae.png \
	af.png \
	ag.png \
	ai.png \
	al.png \
	am.png \
	an.png \
	ao.png \
	ar.png \
	as.png \
	at.png \
	au.png \
	aw.png \
	az.png \
	ba.png \
	bb.png \
	bd.png \
	be.png \
	bf.png \
	bg.png \
	bh.png \
	bi.png \
	bj.png \
	bm.png \
	bn.png \
	bo.png \
	br.png \
	bs.png \
	bt.png \
	bw.png \
	by.png \
	bz.png \
	C.png \
	ca.png \
	cc.png \
	cd.png \
	cf.png \
	cg.png \
	ch.png \
	ci.png \
	ck.png \
	cl.png \
	cm.png \
	cn.png \
	co.png \
	cr.png \
	cu.png \
	cv.png \
	cy.png \
	cz.png \
	de.png \
	dj.png \
	dk.png \
	dm.png \
	do.png \
	dz.png \
	ec.png \
	ee.png \
	eg.png \
	eh.png \
	er.png \
	es.png \
	et.png \
	fi.png \
	fj.png \
	fk.png \
	fm.png \
	fo.png \
	fr.png \
	ga.png \
	gb.png \
	gd.png \
	ge.png \
	gh.png \
	gi.png \
	gm.png \
	gn.png \
	gp.png \
	gq.png \
	gr.png \
	gt.png \
	gu.png \
	gw.png \
	gy.png \
	hk.png \
	hn.png \
	hr.png \
	ht.png \
	hu.png \
	id.png \
	ie.png \
	il.png \
	in.png \
	iq.png \
	ir.png \
	is.png \
	it.png \
	jm.png \
	jo.png \
	jp.png \
	ke.png \
	kg.png \
	kh.png \
	ki.png \
	km.png \
	kn.png \
	kp.png \
	kr.png \
	kw.png \
	ky.png \
	kz.png \
	la.png \
	lb.png \
	lc.png \
	li.png \
	lk.png \
	lr.png \
	ls.png \
	lt.png \
	lu.png \
	lv.png \
	ly.png \
	ma.png \
	mc.png \
	md.png \
	mg.png \
	mh.png \
	mk.png \
	ml.png \
	mm.png \
	mn.png \
	mo.png \
	mq.png \
	mr.png \
	ms.png \
	mt.png \
	mu.png \
	mv.png \
	mw.png \
	mx.png \
	my.png \
	mz.png \
	na.png \
	nc.png \
	ne.png \
	nf.png \
	ng.png \
	ni.png \
	nl.png \
	no.png \
	np.png \
	nr.png \
	nu.png \
	nz.png \
	om.png \
	pa.png \
	pe.png \
	pf.png \
	pg.png \
	ph.png \
	pk.png \
	pl.png \
	pm.png \
	pn.png \
	pr.png \
	ps.png \
	pt.png \
	pw.png \
	py.png \
	qa.png \
	README \
	ro.png \
	ru.png \
	rw.png \
	sa.png \
	sb.png \
	sc.png \
	sd.png \
	se.png \
	sg.png \
	sh.png \
	si.png \
	sk.png \
	sm.png \
	sn.png \
	so.png \
	sr.png \
	st.png \
	sv.png \
	sy.png \
	sz.png \
	tc.png \
	td.png \
	tg.png \
	th.png \
	tj.png \
	tk.png \
	tm.png \
	tn.png \
	to.png \
	tp.png \
	tr.png \
	tt.png \
	tv.png \
	tw.png \
	tz.png \
	ua.png \
	ug.png \
	us.png \
	uy.png \
	uz.png \
	va.png \
	vc.png \
	ve.png \
	vg.png \
	vi.png \
	vn.png \
	vu.png \
	wf.png \
	ws.png \
	ye.png \
	yu.png \
	za.png \
	zm.png \
	zw.png

flagsdir = \
	$(pkgdatadir)

## File created by the gnome-build tools

